# ChangeLog for x11-libs/libdrm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.69 2009/04/06 18:40:35 bluebird Exp $

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> libdrm-2.4.5.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> libdrm-2.4.5.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> libdrm-2.4.5.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libdrm-2.4.5.ebuild:
  Marking libdrm-2.4.5 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libdrm-2.4.5.ebuild:
  Marking libdrm-2.4.5 ppc stable for bug 251832

*libdrm-2.4.5 (26 Feb 2009)

  26 Feb 2009; Donnie Berkholz <dberkholz@gentoo.org>; +libdrm-2.4.5.ebuild:
  Version bump. Bugfixes and off-by-default nouveau changes.

  05 Feb 2009; Rémi Cardona <remi@gentoo.org> libdrm-2.4.4.ebuild:
  disable tests since they require user intervention (see bug #236845)

*libdrm-2.4.4 (16 Jan 2009)

  16 Jan 2009; Rémi Cardona <remi@gentoo.org> +libdrm-2.4.4.ebuild:
  bump to 2.4.4 (p.masked for now though, a few functions of its API were
  dropped)

  06 Jan 2009; Rémi Cardona <remi@gentoo.org> libdrm-2.4.3.ebuild:
  remove cruft and change elogs into ewarns

*libdrm-2.4.3 (06 Jan 2009)

  06 Jan 2009; Rémi Cardona <remi@gentoo.org> +libdrm-2.4.3.ebuild:
  bump to 2.4.3 (GEM fixes and modesetting premises)

  12 Nov 2008; Rémi Cardona <remi@gentoo.org>
  -files/2.4.0-intel-avoid-deadlock-in-intel_bufmgr_fake.patch,
  -files/2.4.0-intel-ioctl-is-not-defined-to-return-errno.patch,
  -libdrm-2.4.0.ebuild:
  removing 2.4.0, it's completely broken according to upstream

*libdrm-2.4.1 (12 Nov 2008)

  12 Nov 2008; Rémi Cardona <remi@gentoo.org>
  +files/2.4.1-intel-Restart-on-interrupt-of-bo_wait_rendering-ins.patch,
  +libdrm-2.4.1.ebuild:
  bump to 2.4.1 with a patch from git master
