@@ -1,0 +1,29 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/Attic/libdrm-2.4.6.ebuild,v 1.1 2009/04/09 09:22:26 scarabeus Exp $
+
+# Must be before x-modular eclass is inherited
+#SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="X.Org libdrm library"
+HOMEPAGE="http://dri.freedesktop.org/"
+SRC_URI="http://dri.freedesktop.org/libdrm/${P}.tar.bz2"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+RESTRICT="test" # see bug #236845
+
+RDEPEND="dev-libs/libpthread-stubs"
+DEPEND="${RDEPEND}"
+
+# FIXME, we should try to see how we can fit the --enable-udev configure flag
+
+pkg_postinst() {
+	x-modular_pkg_postinst
+
+	ewarn "libdrm's ABI may have changed without change in library name"
+	ewarn "Please rebuild media-libs/mesa, x11-base/xorg-server and"
+	ewarn "your video drivers in x11-drivers/*."
+}
