@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libdrm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.69 2009/04/06 18:40:35 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.70 2009/04/09 09:22:26 scarabeus Exp $
+
+*libdrm-2.4.6 (09 Apr 2009)
+
+  09 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> +libdrm-2.4.6.ebuild:
+  Version bump. Per bug #265436.
 
   06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> libdrm-2.4.5.ebuild:
   Stable on sparc, bug #251832
